# frappe-mcp-server

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  Dockerfile.simple  MCP_TROUBLESHOOTING.md  README.md  SSE_CLIENT_GUIDE.md  docker-compose.yml  pyproject.toml
examples/: chat_interface.py
src/: __init__.py  auth.py  frappe_api.py  main.py  server.py
src/tools/: __init__.py  bank_clearance.py  documents.py  filter_parser.py  helpers.py  reports.py  schema.py
tests/: test_mcp_client.py  test_official_mcp_sse_client.py  test_server.py  test_sse_transport.py
